
0.98	FIXED - More PHP 5.3/5.4/strict related errors (split -> explode)
    FIXED - internal relative paths break in several situations (e.g. running from cron)
    FIXED - KILO was ignored when processing %k in special tokens
    FIXED - fixed up comments in dbplug datasource plugin to match reality
    FIXED - nowarn_WMxxxx actually works!
    FIXED - rounding error 'kinks' in angled VIA links
    CHANGE - command-line weathermap has new --no-warn option to disable warnings
    CHANGE - new config parser is much faster than the previous one
    CHANGE - other performance improvements - possibly twice as quick as 0.97c (thanks to ikorzha758 for lots of feedback)
    CHANGE - (Cacti plugin only) images are written to a temporary file first, to avoid displaying half-written images
    ADDED - new DATAOUTPUTFILE allows collected data to be written to a file for later use (automatically enabled in Cacti)
    ADDED - new wmdata: datasource plugin can read data from files produced by DATAOUTPUTFILE
    ADDED - AICONFILLCOLOR accepts 'none' for drawing giant transparent shapes.
    ADDED - Editor 'tidy link' function replaces Vert & Horiz, and does much nicer job
	ADDED - 'retidy' option in editor to recalculate all links previously positioned with 'tidy'.
    ADDED - Named offsets. You can define a position relative to a node, give it a name, and use that name for POSITION and NODES. Think switch ports.
    ADDED - KEYBGCOLOR and KEYOUTLINECOLOR both accept 'none'
    ADDED - Some developer documentation - both code documentation and dev/release process docs.
    ADDED - New improved Cycle Maps mode for Cacti plugin, including "cycle only one group" and true fullscreen with crossfading for NOC displays.
    ADDED - Weathermap will use anti-aliasing if your GD supports it (php-bundled GD doesn't) (thanks shd)
    ADDED - Special token formatting can handle timeticks and time_t formatting (%T and %t respectively)
    ADDED - Memory tracking and Cacti templates to track it